fix: add spacing after breadcrumb separator arrow

--- a/static/css/extended/theme-vars-override.css
+++ b/static/css/extended/theme-vars-override.css
@@ -1112,6 +1112,10 @@ code {
   opacity: 1;
 }
 
+.font-light > li > span[aria-hidden="true"] {
+  margin-inline: 0.3em;
+}
+
 .breadcrumbs {
   font-size: 16px;
 }
